<resources>
    <string name="app_name">Catatanku</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sales_title">Transaksi</string>
    <string name="goods_title">Barang</string>
    <string name="stats_title">Info</string>
    <string name="account_title">Akun</string>
    <string name="add_transaction">Tambah Transaksi</string>
    <string name="sales_card_title">DAFTAR TRANSAKSI</string>
    <string name="no_transaction">Tidak Terdapat Transaksi</string>
    <string name="goods_card_title">DAFTAR BARANG</string>
    <string name="no_goods">Tidak Terdapat Barang</string>
    <string name="add_goods">Tambah Barang</string>
    <string name="stats_card_title">INFORMASI PENJUALAN</string>
    <string name="check_further_information">Cek Informasi Penjualan</string>
    <string name="account_card_title">INFORMASI AKUN</string>
    <string name="account_card_subtitle">INFORMASI TERKAIT AKUN ANDA</string>
    <string name="check_account_info">Edit Informasi Akun</string>
    <string name="btn_login_title">Masuk</string>
    <string name="btn_about_title">Tentang</string>
    <string name="forget_password"><u>LUPA KATA SANDI?</u></string>
    <string name="edit_text_username_hint">Masukan username Anda…</string>
    <string name="edit_text_password_hint">Masukan password Anda…</string>
    <string name="login_str">LOGIN</string>
    <string name="username_str">Username</string>
    <string name="password_str">Password</string>
    <string name="sign_up_card_title">DAFTAR AKUN BARU</string>
    <string name="sign_up_card_desc">ISI DATA-DATA BERIKUT DENGAN BENAR!</string>
    <string name="checkbox_sk">setuju dengan <u>S&amp;K</u></string>

    <string-array name="goods_spinner">
        <item>Urut berdasarkan…</item>
        <item>Harga</item>
        <item>Tanggal</item>
        <item>Jumlah</item>
    </string-array>
</resources>
